fixing kontakt container height on mobile

--- a/static/assets/less/custom.less
+++ b/static/assets/less/custom.less
@@ -78,7 +78,7 @@ div.panel-standalone {
 	margin: -1px !important;
 
 	@media (max-width: @screen-md-min) {
-		height: 160px;
+		height: auto;
 	}
 }
 
